--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
 
     <h3>History</h3>
     <ul id="list" class="list">
-      <li class="minus">
+      <!-- <li class="minus">
         Cash <span>-$400</span><button class="delete-btn">x</button>
-      </li>
+      </li> -->
     </ul>
 
     <h3>Add new transaction</h3>
@@ -48,11 +48,6 @@
       <button class="btn">Add transaction</button>
     </form>
   </div>
-
-
-
-
-
 
   <script src="js/index.js"></script>
 </body>
